[package]
name = "meshtastic_exporter"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
futures = "0.3.30"
lazy_static = "1.4.0"
log = "0.4.21"
meshtastic = { git = "https://github.com/PeterGrace/meshtastic-rust", branch = "ble_feature_flag" }
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
signal-hook = "0.3.17"
strum = { version = "0.26.2", features = ["derive", "strum_macros"] }
time = { version = "0.3.36", features = ["formatting", "macros"] }
time-macros = { version = "0.2.18", features = ["formatting"]  }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "time"] }
tokio-util = "0.7.10"
itertools = "0.12.1"
tracing = {version = "0.1.40"}
tracing-subscriber = {version = "0.3.17", features = ["fmt","env-filter"]}
tracing-log = "0.2.0"
pretty-duration = "0.1.1"
thiserror = "1.0.58"
circular-buffer = "0.1.7"
metrics = { version = "0.22.3" }
metrics-util = "0.16.3"
metrics-exporter-prometheus = { version = "0.14.0", default-features = false, features = ["async-runtime", "http-listener"] }
geohash = "0.13.1"
